# watchb

./: .gitignore  README.md
backend/: README.md  abstract_models.py  decorators.py  fields.py  manage.py  poetry_commands.py  pyproject.toml  serializers.py  views.py
backend/account/: models.py  serializers.py  urls.py  views.py
backend/account/migrations/: 0002_alter_user_managers.py
backend/accounts/: models.py  permissions.py  serializers.py  validators.py  views.py
backend/accounts/migrations/: 0001_initial.py  0003_user_followings.py
backend/backend/: settings.py  urls.py
backend/mixins/: dataclass.py  serializer.py  view.py
backend/movies/: admin.py  agents.py  crawlers.py  custom_types.py  decorators.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/movies/crawlers/: agents.py  apps.py  custom_types.py  interface.py  serializers.py  utils.py  validators.py
backend/movies/crawlers/mixins/: crawler.py  requests.py
backend/movies/management/commands/: crawlmovies.py
backend/movies/migrations/: 0001_initial.py  0002_rename_people_person_rename_people_credit_person_and_more.py
backend/movies/mixins/: api.py  crawler.py  dataclass.py  serializer.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  index.js  store.js
frontend/src/components/: BottomBar.js  BrandLogo.js  EmailChangeForm.js  FormInput.js  ImageUpdateModal.js  LoginModal.js  NavBar.js  PasswordChangeForm.js  RatingStars.js  SignUpModal.js  UserSettingsModal.js  WarningModal.js
frontend/src/hooks/: useEffectOnUpdates.js
(+5 files in other folders)
